<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.bartosz.lab1.MainActivity">

    <TextView android:id="@+id/heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:text="@string/heading"
        android:textSize="20dp"
        android:textColor="#000000"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"/>

    <TextView android:id="@+id/word"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_centerVertical="true"
        android:textColor="#000000"
        android:textSize="17dp"/>

    <EditText android:id="@+id/guess"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginRight="15dp"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:maxLines="1" />
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context="com.example.bartosz.lab1.MainActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/guess"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true">

        <TextView android:id="@+id/cb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cor"
            android:textSize="20dp"
            android:textColor="#028900"
            android:layout_alignParentLeft="true"
            android:layout_marginRight="40dp"
            />

        <TextView android:id="@+id/fb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fai"
            android:textColor="#ae0001"
            android:textSize="20dp"
            />

    </LinearLayout>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/butID"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/bottom"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="7dp">

        <Button android:id="@+id/b1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/b1"
            android:onClick="nextButton"
            android:layout_marginEnd="15dp"/>

        <Button android:id="@+id/b2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/b1"
            android:text="@string/b2"
            android:onClick="checkButton"/>
    </LinearLayout>

    <TextView android:id="@+id/bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:text="@string/Labolatoria1"
        android:textSize="15dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:textColor="#5C1809" />


</RelativeLayout>
